--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,21 +30,80 @@ set(SOURCES
     ReadData.cpp
     BranchBound.cpp
     ILP_scip.cpp
+    ILP_gurobi.cpp
 )
 
-# Find SCIP library
-find_library(SCIP_LIBRARY scip PATHS /usr/local/scip/lib REQUIRED)
+# Source files
+set(SOURCES
+    main.cpp
+    helplers.cpp
+    AntColony.cpp
+    Genetic.cpp
+    Greedy.cpp
+    kMST.cpp
+    Christofides.cpp
+    ReadData.cpp
+    BranchBound.cpp
+    ILP_scip.cpp
+    ILP_gurobi.cpp
+)
 
-# Include SCIP headers
-include_directories(/usr/local/scip/include)
+# Header files
+set(HEADERS
+    helplers.h
+    AntColony.h
+    Genetic.h
+    Greedy.h
+    kMST.h
+    Christofides.h
+    ReadData.h
+    BranchBound.h
+    ILP_scip.h
+)
+
+# Find Gurobi installation
+find_path(GUROBI_INCLUDE_DIR NAMES gurobi_c++.h PATHS /Library/gurobi*/mac64/include)
+find_library(GUROBI_LIBRARY NAMES gurobi_c++ gurobi PATHS /Library/gurobi*/mac64/lib)
+set(GUROBI_INCLUDE_DIR "/Library/gurobi1201/macos_universal2/include")
+# set(GUROBI_LIBRARY "/Library/gurobi1201/macos_universal2/lib/libgurobi_c++.a")
+set(GUROBI_LIBRARY "/Library/gurobi1201/macos_universal2/lib/libgurobi120.dylib")
+set(GUROBI_CPP_LIBRARY "/Library/gurobi1201/macos_universal2/lib/libgurobi_c++.a")
+
+
+# set(GUROBI_LIBRARY "/Library/gurobi1201/macos_universal2/lib/libgurobi120.dylib")
+
+message(STATUS "GUROBI_INCLUDE_DIR: ${GUROBI_INCLUDE_DIR}")
+message(STATUS "GUROBI_LIBRARY: ${GUROBI_LIBRARY}")
+
+if (NOT GUROBI_INCLUDE_DIR OR NOT GUROBI_LIBRARY)
+    message(FATAL_ERROR "Gurobi not found. Make sure it is properly installed.")
+endif()
+
+
+# Find SCIP installation 
+find_path(SCIP_INCLUDE_DIR NAMES scip/scip.h PATHS /usr/local/include)
+find_library(SCIP_LIBRARY NAMES scip PATHS /usr/local/lib)
+set(SCIP_INCLUDE_DIR "/usr/local/include")
+set(SCIP_LIBRARY "/usr/local/lib/libscip.dylib")
+
+message(STATUS "SCIP_INCLUDE_DIR: ${SCIP_INCLUDE_DIR}")
+message(STATUS "SCIP_LIBRARY: ${SCIP_LIBRARY}")
+
+if (NOT SCIP_INCLUDE_DIR OR NOT SCIP_LIBRARY)
+    message(FATAL_ERROR "SCIP not found. Make sure it is properly installed.")
+endif()
+
 
 # Create executable
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-# Link only the SCIP library (without LPI)
-target_link_libraries(${PROJECT_NAME} ${SCIP_LIBRARY})
+# Specify include directories
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR} ${GUROBI_INCLUDE_DIR} ${SCIP_INCLUDE_DIR})
 
-
+# Link Gurobi and SCIP libraries
+# target_link_libraries(${PROJECT_NAME} PRIVATE ${GUROBI_LIBRARY} ${SCIP_LIBRARY})
+target_link_libraries(${PROJECT_NAME} PRIVATE ${GUROBI_LIBRARY} ${GUROBI_CPP_LIBRARY} ${SCIP_LIBRARY})
+# target_link_libraries(${PROJECT_NAME} PRIVATE ${SCIP_LIBRARY})
 
 # # CMake version
 # cmake_minimum_required(VERSION 3.11)
