--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,15 +30,15 @@ message(STATUS "Gurobi Library: ${GUROBI_LIB}")
 message(STATUS "Gurobi C++ Library: ${GUROBI_CXX_LIB}")
 set(CMAKE_INSTALL_RPATH ${GUROBI_LIBRARY_DIR})
 
-# CPLEX config
-set(CPLEX_ROOT "/project/engineering/cplex22/cplex")
-set(CPLEX_LIB_DIR "${CPLEX_ROOT}/lib/x86-64_linux/static_pic")
-set(CONCERT_LIB_DIR "/project/engineering/cplex22/concert/lib/x86-64_linux/static_pic")
-set(CPLEX_INCLUDE_DIR "${CPLEX_ROOT}/include")
-set(CPLEX_CONCERT_INCLUDE_DIR "/project/engineering/cplex22/concert/include")
-set(ILOCLEX_LIB "${CPLEX_LIB_DIR}/libilocplex.a")
-set(CPLEX_LIB "${CPLEX_LIB_DIR}/libcplex.a")
-set(CONCERT_LIB "${CONCERT_LIB_DIR}/libconcert.a")
+# # CPLEX config
+# set(CPLEX_ROOT "/project/engineering/cplex22/cplex")
+# set(CPLEX_LIB_DIR "${CPLEX_ROOT}/lib/x86-64_linux/static_pic")
+# set(CONCERT_LIB_DIR "/project/engineering/cplex22/concert/lib/x86-64_linux/static_pic")
+# set(CPLEX_INCLUDE_DIR "${CPLEX_ROOT}/include")
+# set(CPLEX_CONCERT_INCLUDE_DIR "/project/engineering/cplex22/concert/include")
+# set(ILOCLEX_LIB "${CPLEX_LIB_DIR}/libilocplex.a")
+# set(CPLEX_LIB "${CPLEX_LIB_DIR}/libcplex.a")
+# set(CONCERT_LIB "${CONCERT_LIB_DIR}/libconcert.a")
 
 # LEMON config
 set(LEMON_SOURCE_DIR "/home/research/w.yanwang/lemon-1.3.1")
@@ -54,8 +54,8 @@ add_executable(ts ${SOURCES})
 target_include_directories(ts PRIVATE
     include
     ${GUROBI_INCLUDE_DIR}
-    ${CPLEX_INCLUDE_DIR}
-    ${CPLEX_CONCERT_INCLUDE_DIR}
+    # ${CPLEX_INCLUDE_DIR}
+    # ${CPLEX_CONCERT_INCLUDE_DIR}
     ${LEMON_SOURCE_DIR}
     ${LEMON_BUILD_DIR}
 )
@@ -66,9 +66,9 @@ target_link_libraries(ts
         OpenMP::OpenMP_CXX
         ${GUROBI_LIB}
         ${GUROBI_CXX_LIB}
-        ${ILOCLEX_LIB}
-        ${CONCERT_LIB}
-        ${CPLEX_LIB}
+        # ${ILOCLEX_LIB}
+        # ${CONCERT_LIB}
+        # ${CPLEX_LIB}
         pthread m dl
         stdc++fs
 )
